Horizontal scrolling added..

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,39 +30,51 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="15dp">
+            android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <HorizontalScrollView
+                android:id="@+id/ptvScrollBar"
+                android:layout_width="fill_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_weight="1"
+                android:scrollbars="none">
 
                 <TextView
                     android:id="@+id/previousTextView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
                     android:gravity="center"
                     android:text=""
-                    android:textSize="26sp"
-                    android:textColor="#9E9E9E"/>
+                    android:textColor="#9E9E9E"
+                    android:textSize="26sp" />
 
-            </RelativeLayout>
+            </HorizontalScrollView>
 
-
-            <TextView
-                android:id="@+id/currentTextView"
-                android:layout_width="wrap_content"
+            <HorizontalScrollView
+                android:id="@+id/ctvScrollBar"
+                android:layout_width="fill_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="right"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:layout_weight="2"
-                android:gravity="center"
-                android:hint="0"
-                android:text=""
-                android:textSize="35sp" />
+                android:scrollbars="none">
+
+                <TextView
+                    android:id="@+id/currentTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:gravity="center"
+                    android:hint="0"
+                    android:text=""
+                    android:textSize="35sp" />
+            </HorizontalScrollView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -70,12 +82,12 @@
                 android:layout_weight="1">
 
                 <ProgressBar
-                    android:padding="5dp"
                     android:id="@+id/progressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:padding="5dp"
                     android:visibility="gone" />
 
                 <TextView
@@ -84,6 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
                     android:layout_toLeftOf="@id/progressBar"
                     android:gravity="center"
                     android:text=""
