Improvements in layouts

--- a/app/src/main/res/layout-sw320dp/calculator_pad.xml
+++ b/app/src/main/res/layout-sw320dp/calculator_pad.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/dockLinerLayout"
@@ -186,7 +187,6 @@
                     android:textColor="@color/white" />
             </RelativeLayout>
 
-
             <TextView
                 android:id="@+id/CETextView"
                 android:layout_width="0dp"
@@ -304,7 +304,7 @@
                 android:gravity="center"
                 android:text="9"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -318,7 +318,7 @@
                 android:gravity="center"
                 android:text="*"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -340,7 +340,7 @@
                 android:gravity="center"
                 android:text="x^y"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -354,7 +354,7 @@
                 android:gravity="center"
                 android:text="4"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -368,7 +368,7 @@
                 android:gravity="center"
                 android:text="5"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -382,7 +382,7 @@
                 android:gravity="center"
                 android:text="6"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -396,7 +396,7 @@
                 android:gravity="center"
                 android:text="-"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -418,7 +418,7 @@
                 android:gravity="center"
                 android:text="abs"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -432,7 +432,7 @@
                 android:gravity="center"
                 android:text="1"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -446,7 +446,7 @@
                 android:gravity="center"
                 android:text="2"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -460,7 +460,7 @@
                 android:gravity="center"
                 android:text="3"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -474,7 +474,7 @@
                 android:gravity="center"
                 android:text="+"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -496,7 +496,7 @@
                 android:gravity="center"
                 android:text="("
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -510,7 +510,7 @@
                 android:gravity="center"
                 android:text=")"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -524,7 +524,7 @@
                 android:gravity="center"
                 android:text="0"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -538,7 +538,7 @@
                 android:gravity="center"
                 android:text="."
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
             <TextView
@@ -552,7 +552,7 @@
                 android:gravity="center"
                 android:text="="
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
 
