--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.siddhant.calculator_cs654.HistoryActivity">
+    tools:context=".activities.HistoryActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
