--- a/app/src/main/res/menu/menu_history.xml
+++ b/app/src/main/res/menu/menu_history.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.siddhant.calculator_cs654.HistoryActivity">
+    tools:context=".activities.HistoryActivity">
     <item
         android:id="@+id/action_clear"
         android:icon="@drawable/ic_clear_all_white_48dp"
